--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
+alembic==1.8.0
 anyio==3.6.1
 asgiref==3.5.2
+bcrypt==3.2.2
+cffi==1.15.0
 click==8.1.3
+dnspython==2.2.1
+email-validator==1.2.1
 fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+importlib-metadata==4.12.0
+importlib-resources==5.8.0
+Mako==1.2.0
+MarkupSafe==2.1.1
+pycparser==2.21
 pydantic==1.9.1
+slugify==0.0.1
 sniffio==1.2.0
 SQLAlchemy==1.4.37
 starlette==0.19.1
 typing-extensions==4.2.0
 uvicorn==0.17.6
-
-slugify~=0.0.1
-alembic~=1.8.0
+zipp==3.8.0
