--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,11 @@ Mako==1.2.0
 MarkupSafe==2.1.1
 pycparser==2.21
 pydantic==1.9.1
-slugify==0.0.1
+python-slugify==6.1.2
 sniffio==1.2.0
 SQLAlchemy==1.4.37
 starlette==0.19.1
+text-unidecode==1.3
 typing-extensions==4.2.0
 uvicorn==0.17.6
 zipp==3.8.0
