--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ asgiref==3.5.2
 bcrypt==3.2.2
 cffi==1.15.0
 click==8.1.3
+cryptography==37.0.4
 dnspython==2.2.1
+ecdsa==0.17.0
 email-validator==1.2.1
 fastapi==0.78.0
 greenlet==1.1.2
@@ -14,9 +16,14 @@ importlib-metadata==4.12.0
 importlib-resources==5.8.0
 Mako==1.2.0
 MarkupSafe==2.1.1
+pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.1
+python-jose==3.3.0
+python-multipart==0.0.5
 python-slugify==6.1.2
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.37
 starlette==0.19.1
