--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.8.0
 anyio==3.6.1
 asgiref==3.5.2
+autopep8==1.6.0
 bcrypt==3.2.2
 cffi==1.15.0
 click==8.1.3
@@ -17,6 +18,7 @@ importlib-resources==5.8.0
 Mako==1.2.0
 MarkupSafe==2.1.1
 pyasn1==0.4.8
+pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.9.1
 python-jose==3.3.0
@@ -28,6 +30,7 @@ sniffio==1.2.0
 SQLAlchemy==1.4.37
 starlette==0.19.1
 text-unidecode==1.3
+toml==0.10.2
 typing-extensions==4.2.0
 uvicorn==0.17.6
 zipp==3.8.0
