--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ importlib-metadata==4.12.0
 importlib-resources==5.8.0
 Mako==1.2.0
 MarkupSafe==2.1.1
+psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
