--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,2 @@
 DEBUG=0
-DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost/blog_api
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@db/postgres
