--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,9 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=blog_api
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST=localhost
 
 volumes:
   postgres-data:
