--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 DEBUG=0
 DATABASE_URL=postgresql+psycopg2://postgres:postgres@db/postgres
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://cache:6379
