--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.8.0
 anyio==3.6.1
 asgiref==3.5.2
+async-timeout==4.0.2
 autopep8==1.6.0
 bcrypt==3.2.2
 cffi==1.15.0
 click==8.1.3
 cryptography==37.0.4
+Deprecated==1.2.13
 dnspython==2.2.1
 ecdsa==0.17.0
 email-validator==1.2.1
@@ -17,14 +19,18 @@ importlib-metadata==4.12.0
 importlib-resources==5.8.0
 Mako==1.2.0
 MarkupSafe==2.1.1
-psycopg2-binary==2.9.3
+packaging==21.3
+psycopg-binary==3.0.15
+psycopg2==2.9.3
 pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.9.1
+pyparsing==3.0.9
 python-jose==3.3.0
 python-multipart==0.0.5
 python-slugify==6.1.2
+redis==4.3.4
 rsa==4.8
 six==1.16.0
 sniffio==1.2.0
@@ -34,4 +40,5 @@ text-unidecode==1.3
 toml==0.10.2
 typing-extensions==4.2.0
 uvicorn==0.17.6
+wrapt==1.14.1
 zipp==3.8.0
