--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ MarkupSafe==2.1.1
 packaging==21.3
 psycopg-binary==3.0.15
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
